Lib: GUI: WinForms: Add ContextMenu

--- a/.NET.md
+++ b/.NET.md
@@ -1,4 +1,6 @@
 # .NET
 ## Information sources
+[Awesome .NET!: A collection of awesome .NET libraries, tools, frameworks and software](https://github.com/quozd/awesome-dotnet)
+
 Blogs:
 - [Yazan Diranieh Home Page](http://www.diranieh.com/)
